# cf-truesight

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  diesel.toml  docker-compose.yml  justfile  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS
.github/workflows/: ci-backend.yml  ci-dashboard.yml  ci-sdks.yml  deploy-backend.yml  deploy-dashboard.yml  publish-mobile-sdk.yml  release-cli.yml
clickhouse-migrations/: 001_create_events_table.sql  002_create_identity_map_table.sql  003_create_events_mv_hourly.sql  004_create_users_daily.sql  005_create_user_first_seen.sql  006_backfill_user_tables.sql  007_add_environment_column.sql  008_recreate_tables_with_environment.sql  009_add_properties_map.sql  010_backfill_properties_map.sql  011_create_user_profiles.sql  012_add_session_id.sql  013_create_event_catalog.sql  014_create_user_stats.sql  015_add_platform.sql  016_backfill_platform.sql  017_backfill_identity_resolution.sql
crates/admin-api/: Cargo.toml  Dockerfile  entrypoint.sh
crates/admin-api/src/: main.rs  routes.rs  state.rs
crates/admin-api/src/db/: api_keys.rs  boards.rs  cohorts.rs  funnels.rs  invitations.rs  mod.rs  projects.rs  segments.rs  teams.rs  users.rs
crates/admin-api/src/handlers/: api_keys.rs  auth.rs  boards.rs  cohorts.rs  event_catalog.rs  flows.rs  funnels.rs  health.rs  invitations.rs  live_events.rs  mod.rs  pagination.rs  pivots.rs  projects.rs  properties.rs  query_builder.rs  rbac.rs  retention.rs  segments.rs  stats.rs  teams.rs  trends.rs  users_ch.rs
crates/admin-api/src/middleware/: admin_auth.rs
crates/ch-writer/: Cargo.toml  Dockerfile
crates/ch-writer/src/: batcher.rs  config.rs  consumer.rs  dedup.rs  dlq.rs  health.rs  identity.rs  inserter.rs  main.rs  profiles.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  client.rs  config.rs  main.rs  output.rs
crates/cli/src/auth/: callback_server.rs  mod.rs
crates/cli/src/commands/: boards.rs  cohorts.rs  config.rs  event_catalog.rs  flows.rs  funnels.rs  mod.rs  pivots.rs  projects.rs  properties.rs  retention.rs  segments.rs  skill.rs  stats.rs  teams.rs  trends.rs  update.rs  users.rs
crates/common/: Cargo.toml
crates/common/src/: api_key.rs  auth.rs  config.rs  db.rs  error.rs  event.rs  health.rs  identity.rs  jwt.rs  lib.rs  project.rs  schema.rs  shutdown.rs  sqs.rs  team.rs  telemetry.rs  user.rs
crates/ingestion-api/: Cargo.toml  Dockerfile
crates/ingestion-api/src/: main.rs  routes.rs  state.rs  validation.rs
crates/ingestion-api/src/handlers/: health.rs  ingest.rs
crates/ingestion-api/src/middleware/: api_key_auth.rs  mod.rs  rate_limit.rs  request_id.rs  zstd_decode.rs
dashboard/: CLAUDE.md  components.json  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
dashboard/public/: install.sh
dashboard/src/: App.tsx  globals.css  main.tsx  router.tsx  vite-env.d.ts
dashboard/src/components/: AllowedDomainsTable.tsx  ApiKeyGenerateDialog.tsx  ApiKeyTable.tsx  BreakdownSelector.tsx  ChartTypeSwitcher.tsx  Coachmark.tsx  CohortBuilder.tsx  CohortFilter.tsx  ControlDivider.tsx  EnvironmentSelector.tsx  EventCatalogContent.tsx  EventCombobox.tsx  EventExplorerContent.tsx  EventsTable.tsx  FlowDiagram.tsx  FunnelBuilder.tsx  FunnelChart.tsx  Header.tsx  InsightsChart.tsx  InviteMemberDialog.tsx  LiveEventDetail.tsx  LiveEventRow.tsx  LiveEventsContent.tsx  PageLayout.tsx  PivotTable.tsx  ProjectForm.tsx  ProjectSwitcher.tsx  PropertyFilter.tsx  ProtectedLayout.tsx  RetentionChart.tsx  RetentionMatrix.tsx  SankeyChart.tsx  SegmentBuilder.tsx  SegmentFilter.tsx  SetupGuide.tsx  Sidebar.tsx  StatsCards.tsx  TeamMembersTable.tsx  TeamProjectsTable.tsx  ThemeToggle.tsx  (+5 more)
dashboard/src/contexts/: AuthContext.tsx  EnvironmentContext.tsx
dashboard/src/hooks/: use-api-keys.ts  use-boards.ts  use-cohorts.ts  use-event-catalog.ts  use-event-names.ts  use-events.ts  use-flows.ts  use-funnels.ts  use-insights.ts  use-invitations.ts  use-last-project.ts  use-live-events.ts  use-pivots.ts  use-projects.ts  use-properties.ts  use-retention.ts  use-segments.ts  use-stats.ts  use-table-params.ts  use-teams.ts  use-trends.ts  use-users-ch.ts
dashboard/src/lib/: analytics-types.ts  api.ts  charts.ts  motion.ts  utils.ts
dashboard/src/pages/: AcceptInvitationPage.tsx  AnalyticsPage.tsx  BoardDetailPage.tsx  BoardsPage.tsx  CliAuthPage.tsx  CliPage.tsx  CohortDetailPage.tsx  CohortsPage.tsx  EventCatalogPage.tsx  EventExplorerPage.tsx  EventsPage.tsx  FlowsPage.tsx  FunnelComparePage.tsx  FunnelDetailPage.tsx  FunnelsPage.tsx  InsightsPage.tsx  LiveEventsPage.tsx  LoginPage.tsx  NotFoundPage.tsx  PivotsPage.tsx  ProjectDetailPage.tsx  ProjectSettingsPage.tsx  ProjectsListPage.tsx  RetentionPage.tsx  (+7 more)
ecs-task-definitions/: admin-api.json  ch-writer.json  ingestion-api.json
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2026-02-26-000001_create_projects/: up.sql
migrations/2026-02-26-000002_create_api_keys/: up.sql
migrations/2026-02-26-000003_create_indexes/: down.sql  up.sql
migrations/2026-02-27-000001_create_funnels/: down.sql  up.sql
migrations/2026-03-05-000001_create_users/: up.sql
migrations/2026-03-05-000002_create_teams/: up.sql
migrations/2026-03-05-000003_create_team_members/: down.sql  up.sql
migrations/2026-03-05-000004_create_team_projects/: down.sql  up.sql
migrations/2026-03-05-000005_create_invitations/: up.sql
migrations/2026-03-05-000006_create_allowed_domains/: down.sql  up.sql
migrations/2026-03-05-100000_create_cohorts/: down.sql  up.sql
migrations/2026-03-07-000001_create_boards/: down.sql  up.sql
migrations/2026-03-07-000002_rename_cohorts_to_segments/: down.sql  up.sql
migrations/2026-03-10-000001_add_onboarding_completed_at/: up.sql
scripts/: install_rust.sh  migrate_clickhouse.sh  simulate_traffic.sh
sdks/kmm/: README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
sdks/web/: CLAUDE.md  README.md  package-lock.json  package.json  rollup.config.mjs  tsconfig.json  vitest.config.ts
skills/ts/: SKILL.md
(+104 files in other folders)
