[package]
name = "admin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "admin-api"
path = "src/main.rs"

[dependencies]
truesight-common = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sentry = { workspace = true }
sentry-tower = "0.35"
diesel = { workspace = true }
diesel_migrations = { version = "2.2", features = ["postgres"] }
clickhouse = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
anyhow = { workspace = true }
