[package]
name = "truesight-cli"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "truesight"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "color"] }

# Async runtime & HTTP
tokio = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Identity & time
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

# Terminal output
tabled = "0.18"
colored = "3"

# Config & browser
dirs = "6"
open = "5"

# Crypto (for CSRF state)
rand = { workspace = true }
